测试百度地图接口

--- a/rizuge/html/fanglist.html
+++ b/rizuge/html/fanglist.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="../script/api.js"></script>
 <script>
     apiready = function () {
+        alert();
         var location_param = api.pageParam;
         api.setCustomRefreshHeaderInfo({
             bgColor: '#eee',
