--- a/rizuge/index.html
+++ b/rizuge/index.html
@@ -39,7 +39,8 @@
                 y: $api.dom('header').offsetHeight,
                 w: 'auto',
                 h: 'auto'
-            }
+            },
+            bounces:false
         });
         var NVTabBar = api.require('NVTabBar');
         NVTabBar.open({
