--- a/rizuge/html/fang.html
+++ b/rizuge/html/fang.html
@@ -27,54 +27,46 @@
 <script type="text/javascript">
     apiready = function(){
         var param = {};
+//        $api.fixStatusBar( $api.dom('header') );
         var map = api.require('bMap');
         var systemType = api.systemType;
-//        if(systemType == 'ios'){
-            map.initMapSDK(function(ret) {
-                console.log('1232');
+        var isinit = false;
+        //IOS需要初始化地图
+        if(systemType == 'ios'){
+            map.initMapSDK(function(ret,err) {
+
                 if (ret.status) {
-                    console.log('123');
-                    alert('地图初始化成功，可以从百度地图服务器检索信息了！');
+                    map.getLocation({
+                        accuracy: '100m',
+                        autoStop: true,
+                        filter: 1
+                    }, function(ret, err) {
+                        console.log(JSON.stringify(ret));
+                        if (ret.status) {
+                            alert(JSON.stringify(ret));
+                            api.openFrame({
+                                name: 'fanglist',
+                                url: './fanglist.html',
+                                rect: {
+                                    x: 0,
+                                    y: 75,
+                                    w: 'auto',
+                                    h: 'auto',
+                                    marginBottom: 50
+                                },
+                                bounces: true,
+                                pageParam: param
+                            });
+                        } else {
+                            alert(err.code);
+                        }
+                    });
+                }else{
+                    alert("定位失败，错误码:" + err.code);
+                    return;
                 }
             });
-//        }
-        api.getLocation(
-            function (ret, err) {
-                if(ret && ret.status){
-                    //如果定位成功
-                    var longitude = ret.longitude;//经度
-                    var latitude = ret.latitude;//纬度
-                    param = {
-                        longitude : longitude,
-                        latitude : latitude
-                    };
-                    //根据经纬度获取位置
-//                    map.getNameFromCoords({
-//                        lon: longitude,
-//                        lat: latitude
-//                    }, function(ret, err) {
-//                        if (ret.status) {
-//                            console.log(JSON.stringify(ret));
-//                        }
-//                    });
-                    api.openFrame({
-                        name: 'fanglist',
-                        url: './fanglist.html',
-                        rect: {
-                            x: 0,
-                            y: 75,
-                            w: 'auto',
-                            h: 'auto',
-                            marginBottom: 50
-                        },
-                        bounces: true,
-                        pageParam: param
-                    });
-                } else{
-                    alert(err.msg)
-                }
-            }
-        );
+        }
 
     };
 </script>
