--- a/rizuge/html/fanglist.html
+++ b/rizuge/html/fanglist.html
@@ -89,22 +89,22 @@
                                 var html  = '<div class="fangObject">';//
 //                                html += '<div class="fanginfo">';//
                                 html += '<img src="http://rzg.9170.gs'+ img +'" class="fangimg" alt="">';
-                                html += '<div class="fanginfo_bottom">';//
-                                html += '<div class="distance_div">';//
+                                html += '<div class="fanginfo_bottom aui-row">';//
+                                html += '<div class="distance_div aui-col-xs-3">';//
                                 html += '<i class="icon iconfont icon-location"></i>';
                                 html += '<span class="distance_span">' + distance + '</span>';
                                 html += '</div>';//
-                                html += '<div class="wz_div">';//
+                                html += '<div class="wz_div aui-col-xs-5">';//
                                 html += '<span class="wz_span">';
                                 html += community+room+"室"+lroom+"厅";
                                 html += '</span>';
                                 html += '</div>';//
-                                html += '<div class="fx_div">';//
+                                html += '<div class="fx_div aui-col-xs-2">';//
                                 html += '<span class="fx_span">';
                                 html += f_type == 1?'独立房间':'多人合租';
                                 html += '</span>';
                                 html += '</div>';//
-                                html += '<div class="jg_div">';
+                                html += '<div class="jg_div aui-col-xs-2">';
                                 html += '<span class="jg_span">';
                                 html += price+'元/天';
                                 html += '</span>';
