--- a/rizuge/html/more.html
+++ b/rizuge/html/more.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/aui-skin.css">
     <style>
         header{
+            padding-top: 20px;
             border-bottom:1px solid #eee;
         }
     </style>
