--- a/rizuge/html/login.html
+++ b/rizuge/html/login.html
@@ -102,7 +102,7 @@
                     h: 'auto'
                 },
                 pageParam: {name: 'pageparam'},
-                bounces: true
+                bounces: false
             });
         })
     }
