--- a/rizuge/html/more.html
+++ b/rizuge/html/more.html
@@ -59,7 +59,9 @@
                         w: 'auto',
                         h: 'auto'
                     },
-                    bounces: false
+                    bounces: false,
+                    vScrollBarEnabled: false,
+                    scrollEnabled: false
                 });
             }
         },false);
